compiler/src/compile/ir/snapshots/compiler__compile__ir__optimisations__test__optimisation_snapshot_tests@integration__empty_conditional_simplification.tapir.snap
---
source: compiler/src/compile/ir/optimisations.rs
expression: output
input_file: compiler/src/compile/ir/snapshot_tests/optimisations/integration/empty_conditional_simplification.tapir
---
----------- before -------------
=======================
fn @toplevel() -> 

---- block 3 ----
temp.10 = int 5
x.11 = temp.10
temp.12 = int 19
y.13 = temp.12
temp.14 = bool true
conditional_jump temp.14 0 1

---- block 0 ----
temp.15 = int 19
y.16 = temp.15
temp.17 = bool true
conditional_jump temp.17 4 5

---- block 1 ----
jmp 2

---- block 4 ----
temp.18 = y.16
x.19 = temp.18
jmp 6

---- block 5 ----
jmp 6

---- block 2 ----
x.20 = φ(x.11 from 1, x.21 from 6)
temp.22 = x.20
storeprop temp.22, 0
return 

---- block 6 ----
x.21 = φ(x.19 from 4, x.11 from 5)
jmp 2


----------- remove_constant_conditionals -------------
=======================
fn @toplevel() -> 

---- block 3 ----
temp.10 = int 5
x.11 = temp.10
temp.12 = int 19
y.13 = temp.12
temp.14 = bool true
jmp 0

---- block 0 ----
temp.15 = int 19
y.16 = temp.15
temp.17 = bool true
jmp 4

---- block 4 ----
temp.18 = y.16
x.19 = temp.18
jmp 6

---- block 6 ----
x.21 = φ(x.19 from 4, x.11 from 5)
jmp 2

---- block 2 ----
x.20 = φ(x.11 from 1, x.21 from 6)
temp.22 = x.20
storeprop temp.22, 0
return 


----------- unreferenced_blocks_in_phi -------------
=======================
fn @toplevel() -> 

---- block 3 ----
temp.10 = int 5
x.11 = temp.10
temp.12 = int 19
y.13 = temp.12
temp.14 = bool true
jmp 0

---- block 0 ----
temp.15 = int 19
y.16 = temp.15
temp.17 = bool true
jmp 4

---- block 4 ----
temp.18 = y.16
x.19 = temp.18
jmp 6

---- block 6 ----
x.21 = φ(x.19 from 4)
jmp 2

---- block 2 ----
x.20 = φ(x.21 from 6)
temp.22 = x.20
storeprop temp.22, 0
return 


----------- copy_propagation -------------
=======================
fn @toplevel() -> 

---- block 3 ----
temp.10 = int 5
x.11 = temp.10
temp.12 = int 19
y.13 = temp.12
temp.14 = bool true
jmp 0

---- block 0 ----
temp.15 = int 19
y.16 = temp.15
temp.17 = bool true
jmp 4

---- block 4 ----
temp.18 = temp.15
x.19 = temp.15
jmp 6

---- block 6 ----
x.21 = φ(temp.15 from 4)
jmp 2

---- block 2 ----
x.20 = φ(x.21 from 6)
temp.22 = x.20
storeprop x.20, 0
return 


----------- dead_store_elimination -------------
=======================
fn @toplevel() -> 

---- block 3 ----
temp.10 = int 5
temp.12 = int 19
jmp 0

---- block 0 ----
temp.15 = int 19
jmp 4

---- block 4 ----
jmp 6

---- block 6 ----
x.21 = φ(temp.15 from 4)
jmp 2

---- block 2 ----
x.20 = φ(x.21 from 6)
storeprop x.20, 0
return 


----------- empty_block -------------
=======================
fn @toplevel() -> 

---- block 3 ----
temp.10 = int 5
temp.12 = int 19
jmp 0

---- block 0 ----
temp.15 = int 19
jmp 6

---- block 6 ----
x.21 = φ(temp.15 from 4, temp.15 from 0)
jmp 2

---- block 2 ----
x.20 = φ(x.21 from 6)
storeprop x.20, 0
return 


----------- empty_phi -------------
=======================
fn @toplevel() -> 

---- block 3 ----
temp.10 = int 5
temp.12 = int 19
jmp 0

---- block 0 ----
temp.15 = int 19
jmp 6

---- block 6 ----
jmp 2

---- block 2 ----
storeprop temp.15, 0
return 


----------- simplify_blocks -------------
=======================
fn @toplevel() -> 

---- block 3 ----
temp.10 = int 5
temp.12 = int 19
temp.15 = int 19
jmp 0

---- block 0 ----
jmp 6

---- block 6 ----
storeprop temp.15, 0
jmp 2

---- block 2 ----
return 


----------- dead_store_elimination -------------
=======================
fn @toplevel() -> 

---- block 3 ----
temp.15 = int 19
jmp 0

---- block 0 ----
jmp 6

---- block 6 ----
storeprop temp.15, 0
jmp 2

---- block 2 ----
return 


----------- immediate_stores -------------
=======================
fn @toplevel() -> 

---- block 3 ----
temp.15 = int 19
jmp 0

---- block 0 ----
jmp 6

---- block 6 ----
storeprop imm(19), 0
jmp 2

---- block 2 ----
return 


----------- empty_block -------------
=======================
fn @toplevel() -> 

---- block 3 ----
temp.15 = int 19
jmp 6

---- block 6 ----
storeprop imm(19), 0
return 


----------- simplify_blocks -------------
=======================
fn @toplevel() -> 

---- block 3 ----
temp.15 = int 19
storeprop imm(19), 0
jmp 6

---- block 6 ----
return 


----------- dead_store_elimination -------------
=======================
fn @toplevel() -> 

---- block 3 ----
storeprop imm(19), 0
jmp 6

---- block 6 ----
return 


----------- empty_block -------------
=======================
fn @toplevel() -> 

---- block 3 ----
storeprop imm(19), 0
return
