compiler/src/compile/ir/snapshots/compiler__compile__ir__optimisations__test__optimisation_snapshot_tests@integration__fix_division_by_zero_warning.tapir.snap
---
source: compiler/src/compile/ir/optimisations.rs
expression: output
input_file: compiler/src/compile/ir/snapshot_tests/optimisations/integration/fix_division_by_zero_warning.tapir
---
----------- before -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.8 = fix 5
temp.9 = fix 5
temp.10 = temp.8 - temp.9
x.11 = temp.10
temp.12 = fix 10
temp.13 = x.11
temp.14 = temp.12 f/ temp.13
storeprop temp.14, 0
return 


----------- copy_propagation -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.8 = fix 5
temp.9 = fix 5
temp.10 = temp.8 - temp.9
x.11 = temp.10
temp.12 = fix 10
temp.13 = temp.10
temp.14 = temp.12 f/ temp.10
storeprop temp.14, 0
return 


----------- dead_store_elimination -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.8 = fix 5
temp.9 = fix 5
temp.10 = temp.8 - temp.9
temp.12 = fix 10
temp.14 = temp.12 f/ temp.10
storeprop temp.14, 0
return 


----------- constant_folding -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.8 = fix 5
temp.9 = fix 5
temp.10 = fix 0
temp.12 = fix 10
temp.14 = temp.12 f/ temp.10
storeprop temp.14, 0
return 


----------- duplicate_loads -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.8 = fix 5
temp.9 = temp.8
temp.10 = fix 0
temp.12 = fix 10
temp.14 = temp.12 f/ temp.10
storeprop temp.14, 0
return 


----------- dead_store_elimination -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.8 = fix 5
temp.10 = fix 0
temp.12 = fix 10
temp.14 = temp.12 f/ temp.10
storeprop temp.14, 0
return 


----------- dead_store_elimination -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.10 = fix 0
temp.12 = fix 10
temp.14 = temp.12 f/ temp.10
storeprop temp.14, 0
return 


----------- warnings -------------
[W0001] Warning: Divide by zero not allowed
   ╭─[ fix_division_by_zero_warning.tapir:5:10 ]
   │
 4 │ var x: fix = 5.0 - 5.0;
   │              ────┬────  
   │                  ╰────── This reduces to 0
 5 │ result = 10.0 / x;
   │          ────┬───  
   │              ╰───── This operation will fail
───╯
