compiler/src/compile/ir/snapshots/compiler__compile__ir__optimisations__test__optimisation_snapshot_tests@integration__global_optimizations_combined.tapir.snap
---
source: compiler/src/compile/ir/optimisations.rs
expression: output
input_file: compiler/src/compile/ir/snapshot_tests/optimisations/integration/global_optimizations_combined.tapir
---
----------- before -------------
=======================
fn @toplevel() -> 

---- block 0 ----
getglobal temp.7, 0
storeprop temp.7, 0
temp.8 = int 5
setglobal 1, temp.8
getglobal temp.9, 2
temp.10 = int 1
temp.11 = temp.9 + temp.10
setglobal 2, temp.11
getglobal temp.12, 2
storeprop temp.12, 0
return 


----------- propagate_readonly_globals -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.7 = int 42
storeprop temp.7, 0
temp.8 = int 5
setglobal 1, temp.8
getglobal temp.9, 2
temp.10 = int 1
temp.11 = temp.9 + temp.10
setglobal 2, temp.11
getglobal temp.12, 2
storeprop temp.12, 0
return 


----------- eliminate_dead_globals -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.7 = int 42
storeprop temp.7, 0
temp.8 = int 5
getglobal temp.9, 0
temp.10 = int 1
temp.11 = temp.9 + temp.10
setglobal 0, temp.11
getglobal temp.12, 0
storeprop temp.12, 0
return 


----------- dead_store_elimination -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.7 = int 42
storeprop temp.7, 0
getglobal temp.9, 0
temp.10 = int 1
temp.11 = temp.9 + temp.10
setglobal 0, temp.11
getglobal temp.12, 0
storeprop temp.12, 0
return
