compiler/src/compile/ir/snapshots/compiler__compile__ir__optimisations__test__optimisation_snapshot_tests@integration__integer_overflow_warning.tapir.snap
---
source: compiler/src/compile/ir/optimisations.rs
expression: output
input_file: compiler/src/compile/ir/snapshot_tests/optimisations/integration/integer_overflow_warning.tapir
---
----------- before -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.7 = int 2147483647
x.8 = temp.7
temp.9 = x.8
temp.10 = int 1
temp.11 = temp.9 + temp.10
temp.12 = temp.11
storeprop temp.12, 0
return 


----------- copy_propagation -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.7 = int 2147483647
x.8 = temp.7
temp.9 = temp.7
temp.10 = int 1
temp.11 = temp.7 + temp.10
temp.12 = temp.11
storeprop temp.11, 0
return 


----------- dead_store_elimination -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.7 = int 2147483647
temp.10 = int 1
temp.11 = temp.7 + temp.10
storeprop temp.11, 0
return 


----------- warnings -------------
[W0002] Warning: Integer overflow detected
   ╭─[ integer_overflow_warning.tapir:5:10 ]
   │
 5 │ result = x + 1;
   │          ──┬─┬  
   │            ╰──── This operation will fail
   │              │  
   │              ╰── This causes overflow
───╯
